fix invisible icons

--- a/css/light-theme.css
+++ b/css/light-theme.css
@@ -21,3 +21,7 @@ a:hover {
 footer {
     background-color: #f6f6f6;
 }
+
+.ico {
+    filter: brightness(0.0);
+}
